# aircraft

./: .gitignore  AGENTS.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202402071200_create_flight_events_table.py
backend/src/aircraft_fleet_monitor_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/app/: main.py
backend/src/app/api/: routes_events.py
backend/src/app/core/: config.py
backend/src/app/db/: models.py
backend/src/app/services/: telemetry_stream.py
backend/src/app/workers/: telemetry_consumer.py
backend/tests/: test_events.py  test_health.py  test_worker_consumer.py
docs/: BASE_PROYECTO.md
